...
            android:text="@string/login_subtitle"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:textAppearance="?attr/textAppearanceSubtitle1"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
            android:layout_marginBottom="@dimen/margin_xlarge"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
...
            />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/buttonSignIn"
            android:layout_marginBottom="@dimen/margin_xxlarge"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:text="@={loginViewModel.password}"
...
